       [secondary_attack] blocks instead.
   * fix various minor bugs with attack filtering
 * Miscellaneous and bug fixes:
   * Changed side_drop handling not to automaticaly assign AI for side if
     leader is dead (bug #12186)
   * Changed the behavior of [modify_turns] value= to default to -1
     (no turn limit) instead of 50 if an invalid string is passed instead
     of a number.
   * Fixed [modify_turns] giving the unwanted side-effect of changing
     turn limit when only current= modifier was used.=
   * Removed the compiler work arounds for MSVC6.
   * Added some more compiler workarounds for MSVC9.

Version 1.5.3:
 * Campaigns
   * Descent into Darkness
     * Changed how the beginning of the scenario 'Descent into Darkness' works.
     * Changed how the ice breakage works in 'Beginning of the Revenge'.
     * Many minor fixes and tweaks to various scenarios.
     * New graphics for Apprentice Necromancer and Dark Mage.
     * New indoor maps for 'A Small Favor' parts 2 and 3.
   * Sceptre of Fire
     * Fixed a bug that allowed one to finish 'The Dragon' by defeating both
       enemy leaders.
     * Fixed a coordinate bug that caused 'Hills of the Shorbear Clan' to not
       end when it was supposed to.
   * Son of the Black Eye
     * Fixed the shamans not getting removed from the recall list when they
       should.
     * New portraits for Inarix, Jetto and the old orcish shaman.
     * Reworked the scenarios 'Civil War' and 'Coward'.
 * Editor2
   * Future replacement for wesnoth_editor, launched from title menu or via
     wesnoth -e. Most old editor's features are duplicated, with some
	 improvements.
   * Built by default in scons, cmake and autotools, if building manually
     see RELEASE_NOTES.
   * See http://www.wesnoth.org/wiki/Editor2 for details and known issues.
 * Language and i18n:
   * updated fonts: DejaVuSans 2.26
   * updated translations: Chinese (Traditional), Danish, Finnish, Galician,